2003-06-16  Hans-Peter Nilsson  <hp@axis.com>

	* gas/cris: Match output having $ register prefix.  Deal with
	target variants default requiring register prefix on input.

2003-06-13  Richard Earnshaw  <rearnsha@arm.com>

	* gas/arm/arm.exp: Pass -mfpu=fpa option to the FPA instruction test.

2003-06-12  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/elf-rel15.[sd]: New test.
	* gas/mips/mips.exp: Run it.

2003-06-11  Richard Henderson  <rth@redhat.com>

	* gas/cfi/cfi-common-3.[ds]: New.
	* gas/cfi/cfi.exp: Run it.

2003-06-11  Alan Modra  <amodra@bigpond.net.au>

	* gas/macros/app1.d: Ignore section symbols.
	* gas/macros/app2.d: Likewise.
	* gas/macros/app3.d: Likewise.
	* gas/macros/app4.d: Likewise.

2003-06-10  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* gas/mips/mips.exp: Fix typo.
	* gas/mips/elempic.d: Force o64 ABI.
	* gas/mips/telempic.d: Likewise.

2003-06-10  Alan Modra  <amodra@bigpond.net.au>

	* lib/gas-defs.exp (proc is_elf_format): Copy from ld testsuite.
	* gas/cfi/cfi.exp: Use here.  Only run tests when ELF.
	* gas/macros/and.s: Avoid .set so we don't break mips.

2003-06-10  Alan Modra  <amodra@bigpond.net.au>

	* gas/macros/and.s: New.
	* gas/macros/macros.exp: Assemble it.

2003-06-10  Gary Hade <garyhade@us.ibm.com>

	* gas/ppc/test2elf64.{s,d}: New test.
	* gas/ppc/ppc.exp: Run new test.

2003-06-10  Richard Sandiford  <rsandifo@redhat.com>

	* gas/h8300/h8sx_mov_imm.[sd]: New test.
	* gas/h8300/h8300.exp: Run it.

2003-06-10  Richard Sandiford  <rsandifo@redhat.com>

	* gas/h8300/h8sx_rtsl.[sd]: New test.
	* gas/h8300/h8300.exp: Run it.

2003-06-10  Richard Sandiford  <rsandifo@redhat.com>

	* gas/h8300/h8sx_disp2.[sd]: New test.
	* gas/h8300/h8300.exp: Run it.

2003-06-07  Richard Henderson  <rth@redhat.com>

	* gas/cfi/cfi-common-1.d, gas/cfi/cfi-common-1.s: New.
	* gas/cfi/cfi-common-2.d, gas/cfi/cfi-common-2.s: New.
	* gas/cfi/cfi-diag-1.d, gas/cfi/cfi-diag-1.s: New.
	* gas/cfi/cfi.exp: Run them.
